# mantis_research

./: CMakeLists.txt  README.md
include/: coloreddbg.h  common_types.h  mantisconfig.hpp  squeakrconfig.h  validateMantisUtils.h
raw/: incqfs.lst  meta_info.json  sampleid.lst
src/: CMakeLists.txt  coloreddbg.cc  query.cc  validateMantisUtils.cc  validatemantis.cc
test/: CMakeLists.txt  sdsl_test.cc  test_compress.cc  test_hash.cc  validateMantisUtilsTest.cc
